test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/starchat/mutants/39/result.txt
./test/mutation_analysis/s0989_add_to_array_form_of_integer/hafis/starchat/mutants/39/Solution.java:14: verify: The prover cannot establish an assertion (UndefinedTooLargeIndex) in method addToArrayForm
//@ requires((!(num.length == 1 && num[0] == 0)) ==> (num[0] != 0));
                                                         ^
error: An error while executing a proof script for addToArrayForm: (error "Solver has unexpectedly terminated")
1 error
1 verification failure
